--- a/k8s-manifests/deployment.yaml
+++ b/k8s-manifests/deployment.yaml
@@ -14,6 +14,8 @@ spec:
       spec:
         containers:
           - name: java-app
-            image: ghcr.io/hwaccedugb/testjenkinsk3s/testjenkins:latest  # Замените на ваш образ
+            image: ghcr.io/hwaccedugb/testjenkinsk3s/testjenkins:latest
             ports:
               - containerPort: 8080
+        imagePullSecrets:
+          - name: github-registry-secret
