--- a/k8s-manifests/service.yaml
+++ b/k8s-manifests/service.yaml
@@ -3,9 +3,10 @@ kind: Service
 metadata:
     name: java-app
 spec:
-    type: LoadBalancer
+    type: NodePort
     ports:
       - port: 80
         targetPort: 8080
+        nodePort: 30000
     selector:
       app: java-app
